--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     background-color: aqua;
     height: 500px;
     width: 500px;
+    position: absolute;
 }
 
 .row {
@@ -13,7 +14,4 @@ body {
 }
 
 .row div {
-    height: 30px;
-    width: 30px;
-    border: 2px solid black;
 }
