--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,27 @@ body {
 }
 
 #grid {
-    background-color: aqua;
+    background-color: black;
     height: 500px;
     width: 500px;
-    position: absolute;
+}
+
+#ui {
+    display: flex;
+}
+
+#buttons {
+    display: flex;  
+    /* flex-direction: column; */
 }
 
 .row {
     display: flex;
 }
 
-.row div {
+/* .row div {
+} */
+
+#click {
+
 }
