--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ button {
     font-size: 20px;
     border: 1.5px solid #333334;
     opacity: 0.6;
+    transition: transform 0.1s ease-in-out;
 }
 
 button:hover {
