--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,26 @@ button:hover {
 }
 
 /* Pen option */
+#color {
+    -webkit-appearance: none;
+	border: none;
+    margin: 0.5vw;
+    margin-left: 0%;
+    width: 100%;
+    height: 2.5vw;
+    opacity: 0.6;
+    padding: 0%;
+    transform: scale(1.025);
+    transition: transform 0.1s ease-in-out;
+    background-color: transparent;
+}
+
+#color:hover {
+    opacity: 1;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 #pen {
     display: flex;
     flex-direction: column;
